# nb2chan

./: .flake8  .gitignore  LICENSE  README.md  bot.py  nodemon.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  rundown.bat_  tbump.toml
.github/workflows/: codeql-analysis.yml-  routine-tests.yml
.husky/: pre-commit
nb2chan/: __init__.py  config.py  mecho.py  nb2chan.py  nb2chan_.py
tests/: __init__.py  test_nb2chan.py
